<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="#E0D98D"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_margin="5dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvDate"
            android:textSize="15sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tvName"
            android:textColor="#166119"
            android:textSize="25sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tvPrice"
            android:textColor="@color/black"
            android:textSize="20sp"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tvEuro"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/tvEuro"
            android:textColor="@color/black"
            android:textSize="24sp"
            card_view:layout_constraintStart_toEndOf="@+id/tvPrice"
            card_view:layout_constraintTop_toBottomOf="@+id/tvName" />


        <TextView
            android:id="@+id/tvSpinnerCategory"
            android:layout_width="61dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:text="@string/tvCategory"
            android:textColor="@color/black"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvPrice" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>