<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#18491B"
    android:layout_margin="15dp">

    <TextView
        android:id="@+id/tvIncomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tvincome"
        android:textColor="#1BC322"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvincome"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIncomeText" />

    <TextView
        android:id="@+id/tvExpenditureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/tvexpenditure"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIncome" />

    <TextView
        android:id="@+id/tvExpenditure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvexpenditure"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExpenditureText" />

    <TextView
        android:id="@+id/tvSumText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tvsum"
        android:textColor="#1BC322"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExpenditure" />

    <TextView
        android:id="@+id/tvSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvsum"
        android:textSize="40sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSumText" />

</androidx.constraintlayout.widget.ConstraintLayout>